April 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* charde.cpp/h: Petrus's "temporary" AddHitMessage finally removed
	* felist.cpp: List order bug corrected

April 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* felist.cpp/h: Added AddEntryToPos
	* message.cpp: Messages are now split correctly

2002-04-22  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* AUTHORS: Fixed a small typo
	
2002-04-22  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* charde.h: Tweaked bitmap positions and colors for Oree, goblin, skeleton, imp, gibberling, kobold, enner beast and dark knight

April 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* felist.cpp/h & files with felist calls: Added more parameters (pos and width etc.) for felits
	* hscore.cpp: HScore draw uses felist now

April 21 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* All libraries united

April 21 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* bitmap.cpp/h, colorbit.cpp, graphics.cpp: Subbitmap support added
	* colorbit.cpp/h, graphics.cpp: Text shading added
	* felist.cpp/h: Added felist support for pictures, entry categories and arrow key selection
	* hscore.cpp & all files with felist calls: List colors are now more consistent
	* charba.cpp: Added icons for pray menu
	* itemba.cpp/h, itemde.h, stack.cpp/h: Added icons and categories for items and added sorter support (which isn't yet used)
	* itemde.cpp, slot.cpp, proto.h: Save works once again

April 20 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* itemde.cpp/h, slot.cpp/h: gearslot added
	* feio.cpp, igraph.cpp/h, main.cpp: New menu backround (by Kahvi) added
	* charba.cpp/h, charde.cpp/h: Equipment screen addition prepared

2002-04-20  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* Main/Include/charde.h: Changed all cordinates in bitmap to vector2ds
	* Main/Source/charde.cpp: Some changes that relate to the above change

April 19 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* itemba.cpp/h, itemde.cpp/h, charba.cpp, charde.cpp: Stack parameter removed from Apply funcs
